syntax = "proto3";
package tests.kitchensink;

option go_package = "tests_kitchensink";

import "google/protobuf/any.proto";
import "validate/validate.proto";

message Any {
    google.protobuf.Any none = 1;

    google.protobuf.Any required = 2 [(validate.rules).any.required = true];

    google.protobuf.Any in     = 3 [(validate.rules).any = {in: ["foo", "bar"]}];
    google.protobuf.Any not_in = 4 [(validate.rules).any = {not_in: ["fizz", "buzz"]}];
}
